=======
CHANGES
=======

0.2.8 (unreleased)
------------------

0.2.7 (2009-07-22)
------------------
- Add contact information to default mail [larubbio]
- Switch from oneshot cart to multishot. [larubbio]
- Update mailer so it works with single page checkout [larubbio]

0.2.6 (2009-07-07)
------------------
- Add shipping organization to the email [larubbio]

0.2.5 (2009-07-07)
------------------
- Expose shipping and billing names to the email template
- Expose organization to the email template
- update the default email template

0.2.4 (2009-05-27)
------------------
- Expose shipping service, method and weight to email template. [larubbio]
- Add a boolean config that tells getpaid to return to the form if the user hits 'Continue Shopping' [larubbio]

0.2.3 (2009-05-19)
------------------
- Expose shipping information in default mail template [larubbio]

0.2.2 (2009-05-19)
------------------
- Fix a two phase commit bug when used with a ZODB mount point
- Catch any exceptions that might happen when sending email.

0.2.1 (2009-05-13)
------------------

- Fix a bug where field mapping for fields in fieldsets fails to work
- Fix a bug were the adapter attempts to move itself to the front of the adapters list but fails

0.2 (2009-05-12)
----------------

- Add adapter that collects formgen fields and getpaid fields and emails them
  following successful charge.

0.1 (2009-03-13)
----------------

- removed the package info that shouldn't be under svn [lucielejard]
- moved setup.py at the same level as src, and updated the link to files in it,
- fixed typo (Conutry -> Country) [mcgruff.scruff]
- explicitly including meta.zcml (uncommitted change from hg tarball)
- spacing cleanup (uncommitted change from hg tarball)
- post-migration cleanup. [mcgruff.scruff]
  These files were brought in from a Mercurial tarball (provided by David
  Glick) using Tailor with the following configuration:
  
:: 
 
  [tailor]
  verbose = True
  source = hg:
  target = svn: