@@ -4,6 +4,8 @@ CHANGES
 
 0.2.8 (unreleased)
 ------------------
+- Fix an indentation bug in the one page checkout success handler
+- Remove form description text that is the exact same as the field title or uneeded
 
 0.2.7 (2009-07-22)
 ------------------
